# bring-the-people

./: .gitignore  .kilocodemodes  AGENTS.md  CLAUDE.md  LICENSE  README.md  STAGE4_CHECKLIST.md  package-lock.json  pyproject.toml
.claude/skills/: frontend-v2-context.md  frontend-v2-task.md
.kilocode/commands/: archreview.md  docs.md  experiment.md  forensics.md  plan.md  review.md  session.md  spec.md  work.md
.kilocode/rules/: 00-kilo-behavior.md
.kilocode/rules-architect/: AGENTS.md
.kilocode/rules-architecture-review/: 00-review-format.md
.kilocode/rules-ask/: AGENTS.md
.kilocode/rules-code/: AGENTS.md
.kilocode/rules-debug/: AGENTS.md
.kilocode/rules-debug-forensics/: 00-debug-protocol.md
.kilocode/rules-documentation/: 00-doc-accuracy.md
.kilocode/rules-evaluation-analysis/: 00-eval-taxonomy.md
.kilocode/rules-planning/: 00-plan-template.md
.kilocode/rules-spec-writer/: 00-spec-template.md
.kilocode/rules-streamlit-ui/: 00-ui-protocol.md  01-state-patterns.md
.kilocode/rules-tech-review/: 00-review-checklist.md
config/: policy.toml
docs/: GOALS.md  KNOWN_ISSUES.md  api-reference.md  architecture-decision-engine.md  architecture-strategy-agent.md  development-guide.md
docs/contracts/: frontend-contract.md  (+1 more)
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend-v2/: .eslintrc.json  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  vitest.config.ts  vitest.setup.ts
tests/: test_domain_models.py  test_integration.py  test_orm_models.py  test_repositories.py
(+376 files in other folders)
